# lab5_sigtool

./: .gitignore  CMakeLists.txt  README.md
include/sigtool/: file_utils.hpp  signature_tool.hpp
samples/: demo_message.txt  demo_message_tampered.txt  message.txt  message_tampered.txt
scripts/: run_windows_demo.sh
src/: file_utils.cpp  main.cpp  signature_tool.cpp
